[metadata]
name = pwd
version = 0.1
author = mclds
author_email = mclds@protonmail.com
description = Password Manager
long_description = file: README.md
url = https://notabug.org/micaldas/pwd
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[flake8]
extend-ignore = F401 F841 W605 E704, E722, E1, W1, E2, W2, E3, W3, E4, W4, E5, W5, E731
verbose = 2
show-source = True
